# a2o

./: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  Makefile  README.md  README_LAMBDA.md  app.py  claude-code-setup.md  config.yaml  custom_callbacks.py  lambda_handler.py  middleware.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run.sh  run_fastapi.sh  serverless.yml  vercel.json
.github/workflows/: ci.yml
api/: [...path].py  test.py
message-api-proxy/: .lambdaignore  README.md  app.py  function.json  function_url.json  pyproject.toml  run.sh
message-api-proxy/scripts/: vendor.sh
public/: index.html
tests/: conftest.py  test_basic_auth.py  test_litellm_integration.py
tests/snapshots/test_litellm_integration/test_anthropic_messages_non_streaming/: anthropic_message.json
tests/snapshots/test_litellm_integration/test_anthropic_messages_streaming/: anthropic_streaming_response.txt
tests/snapshots/test_litellm_integration/test_openai_chat_completions_non_streaming/: openai_chat_completion.json
tests/snapshots/test_litellm_integration/test_openai_chat_completions_streaming/: openai_streaming_response.txt
