[project]
name = "litellm-vercel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "litellm[proxy]>=1.42.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.25.0",
  "responses>=0.24.0",
  "pytest-snapshot>=0.9.0"
]
dev = [
  "ruff>=0.8.0",
  "mypy>=1.8.0"
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "RUF", # ruff-specific rules
]
ignore = [
  "E501",  # line too long, handled by formatter
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
files = ["*.py", "api", "middleware.py"]
exclude = ["tests/"]
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true