[project]
name = "a2o-proxy"
version = "0.1.0"
description = "Anthropic to OpenAI format proxy"
requires-python = ">=3.11"
dependencies = [
    "litellm[proxy]>=1.0.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py", "*.yaml"]